tests/errors/algo_missing_use.ptt
use std/list

spark {
  xs is List of int
  algo.sort_ints(ref xs)
}
